# data-operations

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: data_extraction.ipynb  pipeline_manager.ipynb
notebooks/compiled_pipelines/: earth_data_pipeline.json
src/etl/: extract_load_no2.py  utils.py
src/etl/airnow&merra-2/: airnow.py  env.txt  merra-2.py
src/etl/jobs_code/: no2_cloud_run.py
src/pipelines/: earth_data_to_bq.py
src/services/: utils.py
src/services/earth_data/: __init__.py  client.py
src/services/google/: __init__.py  bigquery.py
