[tool.poetry]
name = "data-operations"
version = "0.1.0"
description = ""
authors = ["Patricio Requena <rprequenac@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.30.1"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
